# pulsebox

./: CITATION.cff  LICENSE  LICENSE.txt  MANIFEST.in  Pipfile  README.md  setup.cfg  tox.ini
examples/example_sequence/: example_sequence.ino
src/pulsebox/: .events.py.swp  .gui.py.swp  __init__.py  codeblocks.py  config.ini  config.py  events.py  gui.py  sequences.py
src/pulsebox/tests/: context.py  test_codeblocks.py  test_config.py
tests/: test_codeblocks.py  test_config.py  test_events.py  test_sequences.py
