[metadata]
name = pulsebox
version = 0.4.0
license = MIT
description = Arbitrary digital pulse sequence generator based on Arduino Due
long_description = file: README.md
author = Radim Hošák
author_email = hosak@optics.upol.cz
classifiers =
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: GTK
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Code Generators

[options]
packages = find:
package_dir = src
include_package_data = True
install_requires =

[options.packages.find]
where = src
